--- a/index.html
+++ b/index.html
@@ -1,44 +1,67 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Tile Match (3-in-tray)</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div class="container">
-      <header class="header">
-        <h1 class="title">Тайл-матч: собери 3 одинаковые в лотке</h1>
-        <div class="buttons">
-          <button id="btnNew" type="button">Новая игра</button>
-          <button id="btnUndo" class="secondary" type="button">Отмена хода</button>
-          <button id="btnShuffle" class="secondary" type="button">Перемешать</button>
-          <button id="btnDifficulty" class="danger" type="button">Сложнее</button>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <title>Тайл-матч: собери 3 одинаковые</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <div class="container">
+    <div class="header">
+      <h1 class="title">Тайл-матч: собери 3 одинаковые в лотке</h1>
+      <div class="buttons">
+        <button id="btnNew" type="button">Новая игра</button>
+        <button id="btnUndo" class="secondary" type="button">Отмена</button>
+        <div class="menuWrap">
+          <button id="btnMenu" class="secondary" type="button" aria-haspopup="true" aria-expanded="false">⋯</button>
         </div>
-      </header>
-      <section class="bar">
-        <div class="info" aria-live="polite">
-          <span>Ход:</span><b id="txtMoves">0</b>
-          <span>Осталось плиток:</span><b id="txtLeft">0</b>
-          <span>Лоток:</span><b id="txtTray">0/7</b>
-        </div>
-      </section>
-      <main class="game">
-        <section class="board" id="board" aria-label="Игровое поле">
-          <div class="boardHint">Кликаются только верхние плитки</div>
-        </section>
-        <section class="trayPanel" aria-label="Лоток">
-          <div class="trayHeader">
-            <b>Лоток</b>
-            <small>Если заполнится 7 и тройки не собраны — проигрыш</small>
-          </div>
-          <div class="traySlots" id="traySlots" aria-label="Слоты лотка"></div>
-          <div class="status" id="status" aria-live="polite"></div>
-          <div class="hint">Правило: 3 одинаковые в лотке исчезают автоматически.</div>
-        </section>
-      </main>
+      </div>
     </div>
-    <script defer src="js/app.js"></script>
-  </body>
+
+    <div class="bar">
+      <div class="info">
+        <span>Ход: <b id="txtMoves">0</b></span>
+        <span>Осталось плиток: <b id="txtLeft">0</b></span>
+        <span>Лоток: <b id="txtTray">0/7</b></span>
+      </div>
+    </div>
+
+    <div class="game">
+      <div id="board" class="board">
+        <div class="boardHint">Кликаются только верхние плитки</div>
+      </div>
+
+      <div class="trayPanel">
+        <div class="trayHeader">
+          <div><b>Лоток</b></div>
+          <small>Если заполнится 7 и тройки не собраны — проигрыш</small>
+        </div>
+        <div id="traySlots" class="traySlots"></div>
+        <div id="status" class="status"></div>
+        <div class="hint">Правило: 3 одинаковые в лотке исчезают автоматически.</div>
+      </div>
+    </div>
+
+    <footer class="credits">Emoji graphics by Twemoji (CC-BY 4.0). Если SVG не скачаны — игра покажет emoji.</footer>
+  </div>
+
+  <!-- Popup menu -->
+  <div id="menuModal" class="modal" aria-hidden="true">
+    <div class="modalOverlay" data-close="1"></div>
+    <div class="modalCard" role="dialog" aria-modal="true" aria-label="Меню">
+      <div class="modalTitleRow">
+        <div class="modalTitle">Меню</div>
+        <button id="btnMenuClose" class="secondary modalClose" type="button">✕</button>
+      </div>
+      <div class="modalActions">
+        <button id="btnShuffle" class="secondary" type="button">Перемешать</button>
+        <button id="btnDifficulty" class="danger" type="button">Сложнее</button>
+        <button id="btnStatsReset" class="secondary" type="button">Сброс статистики</button>
+      </div>
+    </div>
+  </div>
+
+  <script defer src="js/app.js"></script>
+</body>
 </html>
