--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>Тайл-матч: собери 3 одинаковые</title>
+  <title>Собери 3 одинаковых</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <h1 class="title">Тайл-матч: собери 3 одинаковые в лотке</h1>
+      <h1 class="title">Собери 3 одинаковых</h1>
       <div class="buttons">
         <button id="btnNew" type="button">Новая игра</button>
         <button id="btnUndo" class="secondary" type="button">Отмена</button>
@@ -35,7 +35,7 @@
       <div class="trayPanel">
         <div class="trayHeader">
           <div><b>Лоток</b></div>
-          <small>Если заполнится 7 и тройки не собраны — проигрыш</small>
+          <small>Если заполнится 7 и "тройки" не собраны — проигрыш</small>
         </div>
         <div id="traySlots" class="traySlots"></div>
         <div id="status" class="status"></div>
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <footer class="credits">Emoji graphics by Twemoji (CC-BY 4.0). Если SVG не скачаны — игра покажет emoji.</footer>
+    <footer class="credits"></footer>
   </div>
 
   <!-- Popup menu -->
